--- a/pages/contact.html
+++ b/pages/contact.html
@@ -10,11 +10,11 @@
     <script src="../app/index.js" defer></script>
   </head>
   <body>
-    <nav class="navbar">
+    <nav class="nav-bar">
       <a href="../index.html"><h1 class="brand-name">TEMASDOS</h1></a>
 
       <button
-        class="menu-btn navbar-toggler"
+        class="menu-btn"
         type="button"
         data-toggle="collapse"
         data-target="#navbarToggleExternalContent"
@@ -25,12 +25,18 @@
         <img class="hamburger" src="../assets/imgs/menu.png" alt="hamburger" />
       </button>
     </nav>
-    <div class="collapsed-menu" id="navbarToggleExternalContent">
+    <div class="collapse" id="navbarToggleExternalContent">
       <ul class="nav-links">
-        <li class="li-nav"><a href="../index.html">Home</a></li>
-        <li class="li-nav"><a href="./about.html">Sobre Nosotros</a></li>
-        <li class="li-nav"><a href="./all.html">Productos</a></li>
-        <li class="li-nav"><a href="./contact.html">Contacto</a></li>
+        <li class="li-nav"><a class="a-nav" href="../index.html">Home</a></li>
+        <li class="li-nav">
+          <a class="a-nav" href="./about.html">Sobre Nosotros</a>
+        </li>
+        <li class="li-nav">
+          <a class="a-nav" href="./all.html">Productos</a>
+        </li>
+        <li class="li-nav">
+          <a class="a-nav" href="./contact.html">Contacto</a>
+        </li>
       </ul>
     </div>
 
