--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Temasdos Homepage</title>
-    <!--STYLESHEET-->
-    <link rel="stylesheet" href="css/style.css" />
+   
     <!--APP-->
     <script src="./app/index.js" defer></script>
     <!---BOOTSTRAP-->
@@ -13,29 +12,31 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+     <!--STYLESHEET-->
+     <link rel="stylesheet" href="css/style.css" />
   </head>   
   <body>
     <nav class="nav-bar">
       <a href="./index.html"><h1 class="brand-name">TEMASDOS</h1></a>
 
       <button
-        class="menu-btn navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarToggleExternalContent"
-        aria-controls="navbarToggleExternalContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
+      class="menu-btn"
+      type="button"
+      data-toggle="collapse"
+      data-target="#navbarToggleExternalContent"
+      aria-controls="navbarToggleExternalContent"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
         <img class="hamburger" src="./assets/imgs/menu.png" alt="hamburger" />
       </button>
     </nav>
-    <div class="menu-collapsed" id="navbarToggleExternalContent">
+    <div class="collapse" id="navbarToggleExternalContent">
       <ul class="nav-links">
-        <li class="li-nav"><a  href="./index.html">Home</a></li>
-        <li class="li-nav"><a  href="./pages/about.html">Sobre Nosotros</a></li>
-        <li class="li-nav"><a  href="./pages/all.html">Productos</a></li>
-        <li class="li-nav"><a  href="./pages/contact.html">Contacto</a></li>
+        <li class="li-nav"><a class="a-nav"  href="./index.html">Home</a></li>
+        <li class="li-nav"><a class="a-nav"  href="./pages/about.html">Sobre Nosotros</a></li>
+        <li class="li-nav"><a class="a-nav"  href="./pages/all.html">Productos</a></li>
+        <li class="li-nav"><a class="a-nav"  href="./pages/contact.html">Contacto</a></li>
       </ul>
     </div>
     <section class="hero">
@@ -63,17 +64,23 @@
         </div>
 
         <div class="grid-nuevos" id="gridNuevos">
-          <div class="grid-item">
+          <div class="grid-item"
+            <a  href="./pages/product.html">
             <img src="./assets/imgs/SOFAS/sisal.jpg" alt="SISAL" />
             <p class="p-item">SISAL</p>
+            </a>
           </div>
           <div class="grid-item">
+            <a  href="./pages/product.html">
             <img src="./assets/imgs/BUTACAS/DINO.jpg" alt="DINO" />
             <p class="p-item">DINO</p>
+          </a>
           </div>
           <div class="grid-item">
+            <a  href="./pages/product.html">
             <img src="./assets/imgs/SOFAS/MISTRAL.jpg" alt="MISTRAL" />
             <p class="p-item">MISTRAL</p>
+          </a>
           </div>
         </div>
         <div class="grid-mas" id="gridMas">
@@ -102,7 +109,6 @@
           <!----FIRST GRID ITEM----->
           <div class="inspo-1">
             <div class="div-1">
-              <h3 class="h-1">01.</h3>
               <img
                 class="inspo-img-1"
                 src="./assets/imgs/GENERAL/HERO1.jpg"
@@ -329,4 +335,8 @@
 
     </footer>
   </body>
+  <!-- Bootstrap JS and dependencies -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </html>
