--- a/pages/product.html
+++ b/pages/product.html
@@ -4,46 +4,40 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Temasdos Productos</title>
-    <!--STYLESHEET-->
-    <link rel="stylesheet" href="../css/style.css" />
-    <!---BOOTSTRAP-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
     <!--APP-->
     <script src="../app/index.js" defer></script>
     <script src="../app/data.js" defer></script>
+   <!---BOOTSTRAP-->
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<!--STYLESHEET-->
+<link rel="stylesheet" href="../css/style.css" />
+    
   </head>
   <body>
-    <nav class="navbar navprod">
-      <a href="../index.html"
-        ><h1 class="brand-name brand-prod">TEMASDOS</h1></a
-      >
+    <nav class="nav-bar navprod">
+      <a href="../index.html"><h1 class="brand-name" style="color: #393434">TEMASDOS</h1></a>
 
       <button
-        class="menu-btn"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarToggleExternalContent"
-        aria-controls="navbarToggleExternalContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <img
-          class="hamburger"
-          src="../assets/imgs/menubl.svg"
-          alt="hamburger"
-        />
+      class="menu-btn"
+      type="button"
+      data-toggle="collapse"
+      data-target="#navbarToggleExternalContent"
+      aria-controls="navbarToggleExternalContent"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+        <img class="hamburger" src="../assets/imgs/menubl.svg" alt="hamburger" />
       </button>
     </nav>
-    <div class="collapsed-menu" id="navbarToggleExternalContent">
+    <div class="collapse" id="navbarToggleExternalContent">
       <ul class="nav-links">
-        <li class="li-nav"><a href="../index.html">Home</a></li>
-        <li class="li-nav"><a href="./pages/about.html">Sobre Nosotros</a></li>
-        <li class="li-nav"><a href="./pages/all.html">Productos</a></li>
-        <li class="li-nav"><a href="./pages/contact.html">Contacto</a></li>
+        <li class="li-nav"><a class="a-nav"  href="../index.html">Home</a></li>
+        <li class="li-nav"><a class="a-nav"  href="./about.html">Sobre Nosotros</a></li>
+        <li class="li-nav"><a class="a-nav"  href="./all.html">Productos</a></li>
+        <li class="li-nav"><a class="a-nav"  href="./contact.html">Contacto</a></li>
       </ul>
     </div>
 
@@ -70,7 +64,7 @@
           </div>
         </div>
         <div id="lowProducto" class="low-producto">
-          <div class="div-h"><h4>ÁGORA y sus configuraciones</h4></div>
+          <div class="div-h"><h4 class="low-title">ÁGORA y sus configuraciones</h4></div>
           <div class="div-configs">
             <div class="div-config">
               <img
@@ -183,4 +177,8 @@
       </div>
     </footer>
   </body>
+  <!-- Bootstrap JS and dependencies -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </html>
