--- a/pages/product.html
+++ b/pages/product.html
@@ -142,8 +142,11 @@
               <span class="sr-only">Next</span>
             </a>
           </div>
-  
+          <div class="div-modelo" id="divModel">
+            <!---JS-->
+          </div>
       </section>
+
     </main>
 
     <footer>
