--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <p>Ver Más</p>
             <img
               class="arrow-forward"
-              src="/assets/imgs/arrow_forward.png"
+              src="./assets/imgs/arrow_forward.png"
               src="arrowfw"
             />
           </div>
