--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <li class="li-nav"><a class="a-nav"  href="./pages/contact.html">Contacto</a></li>
       </ul>
     </div>
-    <section class="hero">
+    <section class="hero"  style="background-image: url(./assets/imgs/GENERAL/FOTOSBG.png)" >
       <div class="hero-div">
         <h1 class="hero-title">TEMASDOS</h1>
         <button class="hero-btn">
@@ -202,7 +202,7 @@
         </div>
       </section>
       <section class="category">
-        <div class="sofa-category">
+        <div  class="sofa-category" style="background-image: url(./assets/imgs/GENERAL/SOFASCAT.png)">
           <h3 class="sofa-h">Sofás</h3>
           <a href="./pages/all.html"
             ><button class="cat-btn">
@@ -214,7 +214,7 @@
               /></button
           ></a>
         </div>
-        <div class="sofa-category2">
+        <div class="sofa-category2" style="background-image: url(./assets/imgs/GENERAL/BUTACASCAT.png)">
           <h3 class="butaca-h">Butacas</h3>
           <a href="./pages/all.html"
             ><button class="cat-btn">
@@ -226,7 +226,7 @@
               /></button
           ></a>
         </div>
-        <div class="sofa-category3">
+        <div class="sofa-category3" style="background-image: url(./assets/imgs/GENERAL/MESITAREMO.jpg)">
           <h3 class="mobiliario-h">Mobiliario</h3>
           <a href="./pages/all.html"
             ><button class="cat-btn">
@@ -253,7 +253,7 @@
               <a href="./pages/about.html"
                 ><button>
                   <p>Conócenos</p>
-                  <img src="/assets/imgs/arrowbl.png" src="arrowfw" /></button
+                  <img src="./assets/imgs/arrowbl.png" src="arrowfw" /></button
               ></a>
             </div>
           </div>
@@ -266,7 +266,7 @@
               <a href="./pages/about.html"/>
               <button>
                 <p>Lee Más</p>
-                <img  src="/assets/imgs/arrowbl.png" src="arrowfw" />
+                <img  src="./assets/imgs/arrowbl.png" src="arrowfw" />
               </button>
             </a>
             </div>
@@ -283,7 +283,7 @@
               <a href="./pages/about.html"/>
               <button>
                 <p>Lee Más</p>
-                <img  src="/assets/imgs/arrowbl.png" alt="arrowfw" />
+                <img  src="./assets/imgs/arrowbl.png" alt="arrowfw" />
               </button>
             </a>
             </div>
@@ -305,7 +305,7 @@
         
       </section>
     </main>
-    <footer>
+    <footer style="background-image: url(./assets/imgs/GENERAL/Backfooter.png)">
       <div class="footer-grid">
         <div class="inner-footer">
           <p class="inner-temasdos">TEMASDOS</p>
