--- a/pages/contact.html
+++ b/pages/contact.html
@@ -87,7 +87,9 @@
       </section>
     </main>
 
-    <footer>
+    <footer
+      style="background-image: url(../assets/imgs/GENERAL/Backfooter.png)"
+    >
       <div class="footer-grid">
         <div class="inner-footer">
           <p class="inner-temasdos">TEMASDOS</p>
