--- a/pages/product.html
+++ b/pages/product.html
@@ -149,7 +149,7 @@
 
     </main>
 
-    <footer>
+    <footer style="background-image: url(../assets/imgs/GENERAL/Backfooter.png)">
       <div class="footer-grid">
         <div class="inner-footer">
           <p class="inner-temasdos">TEMASDOS</p>
