--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
         
       </section>
     </main>
-    <footer style="background-image: url(./assets/imgs/GENERAL/Backfooter.png)">
+    <footer >
       <div class="footer-grid">
         <div class="inner-footer">
           <p class="inner-temasdos">TEMASDOS</p>
