--- a/pages/about.html
+++ b/pages/about.html
@@ -85,7 +85,7 @@
         </div>
       </section>
 
-      <footer style="background-image: url(../assets/imgs/GENERAL/Backfooter.png)">
+      <footer>
         <div class="footer-grid">
           <div class="inner-footer">
             <p class="inner-temasdos">TEMASDOS</p>
