--- a/pages/contact.html
+++ b/pages/contact.html
@@ -87,9 +87,7 @@
       </section>
     </main>
 
-    <footer
-      style="background-image: url(../assets/imgs/GENERAL/Backfooter.png)"
-    >
+    <footer>
       <div class="footer-grid">
         <div class="inner-footer">
           <p class="inner-temasdos">TEMASDOS</p>
